--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.8.6",
+        "@inertiajs/inertia-react": "^0.5.5",
+        "@inertiajs/progress": "^0.2.4"
     }
 }
